Removed the old way of getting the placeholder according to the initial parameter value and just check whole placeholder values